--- a/app/src/main/res/layout/widget_multiple_item_common.xml
+++ b/app/src/main/res/layout/widget_multiple_item_common.xml
@@ -1,63 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginBottom="10dp"
-    android:background="@drawable/shape_rectangle19">
-
-    <ImageView
-        android:id="@+id/ivPicAreaImageUrl"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:adjustViewBounds="true"
-        app:layout_constraintDimensionRatio="1:1"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@id/rvContentAreaList"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvStockout"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:layout_marginRight="9dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/shape_recharge_commentlist"
-        android:gravity="center"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="无货"
-        android:textColor="#fff8f6"
-        android:textSize="11sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/ivPicAreaImageUrl"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <com.example.myapplication.recharge.widget.ScrollTextViewCommentListBackground
-        android:id="@+id/tvCommentList"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:layout_marginRight="9dp"
-        android:layout_marginBottom="5dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="操作简单"
-        android:textColor="#fff8f6"
-        android:textSize="11sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/tvStockout"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvContentAreaList"
+    app:cardCornerRadius="10dp"
+    app:cardUseCompatPadding="true">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:background="@drawable/shape_rectangle19">
+
+        <ImageView
+            android:id="@+id/ivPicAreaImageUrl"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:adjustViewBounds="true"
+            app:layout_constraintDimensionRatio="1:1"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toTopOf="@id/rvContentAreaList"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvStockout"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:layout_marginRight="9dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/shape_recharge_commentlist"
+            android:gravity="center"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="无货"
+            android:textColor="#fff8f6"
+            android:textSize="11sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/ivPicAreaImageUrl"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <com.example.myapplication.recharge.widget.ScrollTextViewCommentListBackground
+            android:id="@+id/tvCommentList"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:layout_marginRight="9dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="操作简单"
+            android:textColor="#fff8f6"
+            android:textSize="11sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@id/tvStockout"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvContentAreaList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
