--- a/app/src/main/res/layout/widget_multiple_item_recharge.xml
+++ b/app/src/main/res/layout/widget_multiple_item_recharge.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
@@ -20,17 +20,26 @@
         android:textColor="#333333"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/et_phone"
+        app:layout_constraintBottom_toTopOf="@id/tvLoginRechargeText"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:layout_width="7dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arrow3"
+        android:layout_marginStart="5dp"
+        app:layout_constraintLeft_toRightOf="@id/tvTitle"
+        app:layout_constraintTop_toTopOf="@id/tvTitle"
+        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+        />
 
 
         <TextView
-            android:id="@+id/et_phone"
+            android:id="@+id/tvLoginRechargeText"
             android:layout_width="115dp"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="18dp"
+            android:textSize="14dp"
             android:textColor="#333333"
             android:layout_marginLeft="10dp"
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
@@ -42,8 +51,8 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/phone"
-            app:layout_constraintTop_toTopOf="@id/et_phone"
-            app:layout_constraintBottom_toBottomOf="@id/et_phone"
+            app:layout_constraintTop_toTopOf="@id/tvLoginRechargeText"
+            app:layout_constraintBottom_toBottomOf="@id/tvLoginRechargeText"
             app:layout_constraintRight_toRightOf="@id/rlRecharge"
             />
 
@@ -58,6 +67,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_phone"/>
+        app:layout_constraintTop_toBottomOf="@id/tvLoginRechargeText"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
