--- a/app/src/main/res/layout/widget_scroll_comment_list_layout.xml
+++ b/app/src/main/res/layout/widget_scroll_comment_list_layout.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@drawable/shape_recharge_commentlist_second">
 
     <TextView
         android:id="@+id/tv_banner2"
-        android:layout_width="56dp"
+        android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
@@ -14,18 +15,17 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:maxLines="1"
-        android:background="@drawable/shape_recharge_commentlist_second"
+
         android:gravity="center"
         android:textColor="#ffffff"
         android:textSize="11sp" />
 
     <TextView
         android:id="@+id/tv_banner1"
-        android:layout_width="56dp"
+        android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:background="@drawable/shape_recharge_commentlist_second"
         android:ellipsize="end"
         android:maxLines="1"
         android:gravity="center"
