--- a/app/src/main/res/layout/widget_multiple_item_recharge.xml
+++ b/app/src/main/res/layout/widget_multiple_item_recharge.xml
@@ -1,72 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginBottom="10dp"
-    android:background="@drawable/shape_recharge_advertise_background">
-
-
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="0dp"
+    app:cardUseCompatPadding="true">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="9dp"
-        android:text="快速充值"
-        android:textColor="#333333"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/tvLoginRechargeText"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <ImageView
-        android:layout_width="7dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/arrow3"
-        android:layout_marginStart="5dp"
-        app:layout_constraintLeft_toRightOf="@id/tvTitle"
-        app:layout_constraintTop_toTopOf="@id/tvTitle"
-        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
-        />
+        android:background="@drawable/shape_recharge_advertise_background">
 
 
         <TextView
-            android:id="@+id/tvLoginRechargeText"
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="9dp"
+            android:text="快速充值"
+            android:textColor="#333333"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/tvGetTelephoneNumber"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="7dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/arrow3"
+            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+            app:layout_constraintLeft_toRightOf="@id/tvTitle"
+            app:layout_constraintTop_toTopOf="@id/tvTitle" />
+
+
+        <TextView
+            android:id="@+id/tvGetTelephoneNumber"
             android:layout_width="115dp"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="14dp"
-            android:textColor="#333333"
             android:layout_marginLeft="10dp"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle"
+            android:text="19996801970"
+            android:textColor="#333333"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/rlRecharge"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/rlRecharge"/>
+            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
         <ImageView
             android:id="@+id/btnSelect"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/phone"
-            app:layout_constraintTop_toTopOf="@id/tvLoginRechargeText"
-            app:layout_constraintBottom_toBottomOf="@id/tvLoginRechargeText"
+            app:layout_constraintBottom_toBottomOf="@id/tvGetTelephoneNumber"
             app:layout_constraintRight_toRightOf="@id/rlRecharge"
-            />
+            app:layout_constraintTop_toTopOf="@id/tvGetTelephoneNumber" />
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rlRecharge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvLoginRechargeText"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rlRecharge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGetTelephoneNumber" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
