--- a/app/src/main/res/layout/widget_scroll_comment_list_layout.xml
+++ b/app/src/main/res/layout/widget_scroll_comment_list_layout.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@drawable/shape_recharge_commentlist_second">
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/tv_banner2"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:ellipsize="end"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:maxLines="1"
-
+        android:background="@drawable/shape_recharge_commentlist_second"
         android:gravity="center"
         android:textColor="#ffffff"
         android:textSize="11sp" />
@@ -28,8 +26,9 @@
         android:paddingRight="5dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:background="@drawable/shape_recharge_commentlist_second"
         android:gravity="center"
         android:textColor="#ffffff"
         android:textSize="11sp"  />
 
-</RelativeLayout>
+</LinearLayout>
