--- a/app/src/main/res/drawable/shape_recharge_advertise_background.xml
+++ b/app/src/main/res/drawable/shape_recharge_advertise_background.xml
@@ -2,14 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:width="158dp" android:height="158dp">
         <shape android:shape="rectangle">
-            <corners android:radius="10dp"  />
             <gradient
-                android:angle="0"
+                android:angle="270"
                 android:endColor="#f5f8ff"
                 android:centerColor="#ebf1ff"
-                android:startColor="#f5f8ff" />
-            <corners android:radius="4dp" />
+                android:startColor="#e0e9ff" />
         </shape>
-
     </item>
 </selector>
