--- a/app/src/main/res/layout/widget_multiple_item_null.xml
+++ b/app/src/main/res/layout/widget_multiple_item_null.xml
@@ -6,8 +6,8 @@
     app:cardCornerRadius="10dp"
     app:cardElevation="0dp"
     app:cardUseCompatPadding="true">
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    <androidx.constraintlayout.widget.ConstraintLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_rectangle19">
@@ -16,15 +16,9 @@
             android:id="@+id/rvContentAreaList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-
-
-
-
-
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
