--- a/app/src/main/res/layout/widget_multiple_item_common.xml
+++ b/app/src/main/res/layout/widget_multiple_item_common.xml
@@ -6,19 +6,21 @@
     app:cardCornerRadius="10dp"
     app:cardElevation="0dp"
     app:cardUseCompatPadding="true">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_rectangle19">
+
 
         <ImageView
             android:id="@+id/ivPicAreaImageUrl"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:adjustViewBounds="true"
-            app:layout_constraintDimensionRatio="1:1"
             android:scaleType="fitXY"
-            app:layout_constraintBottom_toTopOf="@id/rvContentAreaList"
+            app:layout_constraintBottom_toTopOf="@id/clContentAreaList"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -41,27 +43,65 @@
             app:layout_constraintBottom_toBottomOf="@+id/ivPicAreaImageUrl"
             app:layout_constraintRight_toRightOf="parent" />
 
-        <com.example.myapplication.recharge.widget.ScrollTextViewCommentListBackground
-            android:id="@+id/tvCommentList"
-            android:layout_width="wrap_content"
-            android:layout_height="19dp"
-            android:layout_marginRight="9dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clCommentList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="操作简单"
-            android:textColor="#fff8f6"
-            android:textSize="11sp"
+            android:layoutDirection="rtl"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/tvStockout"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvContentAreaList"
+            >
+
+            <AdapterViewFlipper
+                android:id="@+id/tvCommentList"
+                android:layout_width="wrap_content"
+                android:layout_height="19dp"
+                android:autoStart="true"
+                android:flipInterval="8000"
+                android:inAnimation="@animator/anim_in"
+                android:outAnimation="@animator/anim_out"
+                android:visibility="gone"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clContentAreaList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl" />
+            app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvContentAreaList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/ivTopImage"
+            android:layout_width="wrap_content"
+            android:layout_height="17dp"
+            android:adjustViewBounds="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginStart="9dp"
+            android:layout_marginBottom="9dp"
+            android:layout_marginEnd="6dp"
+            android:scaleType="fitXY"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
