--- a/app/src/main/res/layout/activity_recharge_page.xml
+++ b/app/src/main/res/layout/activity_recharge_page.xml
@@ -26,7 +26,7 @@
             android:id="@+id/scrollerLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
+            android:scrollbars="none"
             app:isPermanent="true">
 
 
@@ -58,7 +58,10 @@
 
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:scrollbarSize="0dp"
+                android:scrollbars="none"
+                >
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -663,7 +666,8 @@
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/nestedScrollView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:scrollbarSize="0dp">
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPager2"
